// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion component matches snapshot with additional props 1`] = `
<body>
  <div>
    <button
      class="sc-AxjAm dGijUn"
      color="default"
      name=""
      type="button"
    >
      <span
        class="sc-AxirZ cXnwHz"
      >
        title
      </span>
      <svg
        data-testid="up-svg"
      >
        up.svg
      </svg>
    </button>
    <div
      class="sc-AxiKw iZKlvk"
    />
  </div>
</body>
`;

exports[`Accordion component matches snapshots with required props only 1`] = `
<body>
  <div>
    <button
      class="sc-AxjAm dGijUn"
      color="default"
      name=""
      type="button"
    >
      <span
        class="sc-AxirZ cXnwHz"
      />
      <svg
        data-testid="up-svg"
      >
        up.svg
      </svg>
    </button>
    <div
      class="sc-AxiKw iZKlvk"
    />
  </div>
</body>
`;
